<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/side"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHistory" />

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:layout_marginStart="@dimen/side"
        android:layout_marginTop="@dimen/medium"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnFriends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuest" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/side"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReward" />

    <Button
        android:id="@+id/btnReward"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:layout_marginStart="@dimen/side"
        android:layout_marginTop="@dimen/top"
        android:layout_marginEnd="@dimen/side"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnReward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQuest"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:layout_marginStart="@dimen/side"
        android:layout_marginTop="@dimen/medium"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnQuest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReward" />
</androidx.constraintlayout.widget.ConstraintLayout>